; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_davinci_emac.c_emac_int_disable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_davinci_emac.c_emac_int_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.emac_priv = type { i64 }

@EMAC_VERSION_2 = common dso_local global i64 0, align 8
@EMAC_DM646X_CMRXINTEN = common dso_local global i32 0, align 4
@EMAC_DM646X_CMTXINTEN = common dso_local global i32 0, align 4
@EMAC_CTRL_EWCTL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.emac_priv*)* @emac_int_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emac_int_disable(%struct.emac_priv* %0) #0 {
  %2 = alloca %struct.emac_priv*, align 8
  %3 = alloca i64, align 8
  store %struct.emac_priv* %0, %struct.emac_priv** %2, align 8
  %4 = load %struct.emac_priv*, %struct.emac_priv** %2, align 8
  %5 = getelementptr inbounds %struct.emac_priv, %struct.emac_priv* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @EMAC_VERSION_2, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %18

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @local_irq_save(i64 %10)
  %12 = load i32, i32* @EMAC_DM646X_CMRXINTEN, align 4
  %13 = call i32 @emac_ctrl_write(i32 %12, i32 0)
  %14 = load i32, i32* @EMAC_DM646X_CMTXINTEN, align 4
  %15 = call i32 @emac_ctrl_write(i32 %14, i32 0)
  %16 = load i64, i64* %3, align 8
  %17 = call i32 @local_irq_restore(i64 %16)
  br label %21

18:                                               ; preds = %1
  %19 = load i32, i32* @EMAC_CTRL_EWCTL, align 4
  %20 = call i32 @emac_ctrl_write(i32 %19, i32 0)
  br label %21

21:                                               ; preds = %18, %9
  ret void
}

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i32 @emac_ctrl_write(i32, i32) #1

declare dso_local i32 @local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
